# tennis_scoreboard

./: .gitignore  README.md  pyproject.toml  setup_project.ps1  start_server.ps1
alembic/: env.py
alembic/versions/: 6c1569d78388_create_players_and_matches_tables.py  749021836713_create_players_and_matches_tables.py  9ca5b4ed9ea8_create_players_and_matches_tables.py  cf2a45986bda_make_winner_id_nullable_in_matches.py  d0258e276df1_create_players_and_matches_tables.py
src/: __init__.py  main.py  server.py
src/app/: main.py  server.py
src/app/controllers/: __init__.py  match_controller.py  web_controller.py
src/app/dto/: __init__.py  match_dto.py  player_dto.py
src/app/models/: __init__.py  database.py  match.py
src/app/services/: __init__.py  match_service.py  player_service.py
src/app/templates/: matches.html
src/dto/: __init__.py
src/models/: __init__.py  match.py  player.py
src/tennis_scoreboard/: __init__.py  server.py
