[project]
name = "tennis-scoreboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dmitry", email = "dimkin3@gmail.com" }
]
dependencies = [
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "mysql-connector-python>=9.3.0",
    "alembic>=1.15.2",
    "jinja2>=3.1.6",
    "waitress>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "N", "D", "B"]
lint.ignore = ["D203", "D213"]
target-version = "py313"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_scoreboard"]
