[project]
name = "tennis-scoreboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dmitry", email = "dimkin3@gmail.com" }
]
dependencies = [
    "pytest>=8.3.5",
    "mysql-connector-python>=9.3.0",
    "jinja2>=3.1.6",
    "uuid>=1.30",
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "N", "D", "B"]
lint.ignore = ["D203", "D213"]
target-version = "py313"
exclude = [
    "build",
    "dist",
    ".eggs",
    ".tox",
    ".venv",
    ".env",
    "__pycache__",
    "venv",
    "venvs",
    ".pytest_cache",
    "migrations",
    "tests",
    "docs",
    ".ruff_cache",
    "alembic/versions",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_scoreboard"]
